syntax="proto2";

message OperatorSeed{
  optional int64 id = 1;
  optional string kind = 2;
  //optional string iterator = 4;

  message Udf{
    optional bytes function = 1;
    optional string wrapper = 2;
  }

  optional Udf udf = 3;

  message Slot{
    optional int64 occupant_id = 1;
  }

  message InputSlot{
    optional int64 owner_id = 1;
    optional Slot occupant = 2;
  }

  message OutputSlot{
    optional int64 owner_id = 1;
    optional Slot occupant = 2;
  }

  repeated InputSlot input_slots = 4;
  repeated OutputSlot output_slots = 5;
}

message RheemPlan{
  repeated OperatorSeed operators = 1;
}

message RheemContext{

  enum Platform{
    spark = 0;
    java = 1;
    python = 2;
  }

  repeated Platform platforms = 1;
}

message RheemInput{
  optional RheemPlan rplan = 1;
  optional RheemContext rctx = 2;
}